[gd_scene load_steps=17 format=3 uid="uid://0swq8evanvan"]

[ext_resource type="Texture2D" uid="uid://dfuxpogk8v43e" path="res://Goblin Scene/business_gobliman.png" id="1_e8yaw"]
[ext_resource type="Script" path="res://Goblin Scene/business_goblin.gd" id="1_hrd8v"]
[ext_resource type="Script" path="res://Goblin Scene/FiniteStateMachine.gd" id="4_4hsum"]
[ext_resource type="Script" path="res://Goblin Scene/enemy_wander_state.gd" id="5_62x4t"]
[ext_resource type="Script" path="res://scripts/EnemyHurtBox.gd" id="6_3nxp2"]
[ext_resource type="Script" path="res://Goblin Scene/enemy_chase_state.gd" id="6_go21u"]
[ext_resource type="Script" path="res://Goblin Scene/enemy_hurt_state.gd" id="6_hs6c7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xu1rm"]
atlas = ExtResource("1_e8yaw")
region = Rect2(0, 0, 18, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmugg"]
atlas = ExtResource("1_e8yaw")
region = Rect2(0, 0, 18, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsbig"]
atlas = ExtResource("1_e8yaw")
region = Rect2(18, 0, 18, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_64k16"]
atlas = ExtResource("1_e8yaw")
region = Rect2(36, 0, 18, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6osi"]
atlas = ExtResource("1_e8yaw")
region = Rect2(54, 0, 18, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ynrf"]
atlas = ExtResource("1_e8yaw")
region = Rect2(72, 0, 18, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekhd4"]
atlas = ExtResource("1_e8yaw")
region = Rect2(90, 0, 18, 17)

[sub_resource type="SpriteFrames" id="SpriteFrames_tt0s6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu1rm")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmugg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsbig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64k16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6osi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ynrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekhd4")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yohcb"]
radius = 7.0
height = 16.0

[node name="BusinessGoblin" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 19
script = ExtResource("1_hrd8v")
acceleration = 100.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -6)
scale = Vector2(1, 1.137)
sprite_frames = SubResource("SpriteFrames_tt0s6")
animation = &"move"
autoplay = "idle"
frame_progress = 0.205587
offset = Vector2(1, -1)

[node name="ShadowSprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.392157)
show_behind_parent = true
position = Vector2(0, 1)
scale = Vector2(0.8, 1)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-3, 0, 0, -3, 3, 0, 0, 3)

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("4_4hsum")
state = NodePath("EnemyWanderState")

[node name="EnemyWanderState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator", "vision_cast")]
script = ExtResource("5_62x4t")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")
vision_cast = NodePath("../../RayCast2D")

[node name="EnemyChaseState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator", "vision_cast")]
script = ExtResource("6_go21u")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")
vision_cast = NodePath("../../RayCast2D")

[node name="EnemyHurtState" type="Node" parent="FiniteStateMachine"]
script = ExtResource("6_hs6c7")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(0, 16)

[node name="EnemyHurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("6_3nxp2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtBox"]
position = Vector2(0, -6)
shape = SubResource("CapsuleShape2D_yohcb")
